<resources>
    <string name="app_name">College Schedule</string>
    <string name="action_settings">Settings</string>
    <string name="upcomingEventsHeading">UPCOMING EVENTS</string>
    <string name="degreeProgressHeading">DEGREE PROGRESS</string>
    <string name="termProgressHeading">TERM PROGRESS</string>
    <string name="allTermsButton">All Terms</string>
    <string name="currentTermButton">Current Term</string>
    <string name="allTermsTitle">ALL TERMS</string>
    <string name="navigation_panel_title">Navigation Panel</string>
    <string name="menu_home_text">Home</string>
    <string name="menu_current_term">Current Term</string>
    <string name="menu_all_terms">All Terms</string>
    <string name="term_details">TERM DETAILS</string>
    <string name="coursesTitle">COURSES</string>
    <string name="assessmentsTitle">ASSESSMENTS</string>
    <string name="alertsTitle">ALERTS</string>
    <string name="courseDetailsTitle">COURSE DETAILS</string>
    <string name="mentorsTitle">MENTORS</string>
    <string name="assessmentDetailsTitle">ASSESSMENT DETAILS</string>
    <string name="menu_alerts">Alerts</string>
    <string name="assessmentGoalDateLabel">GOAL DATE</string>
    <string name="assessmentStatusLabel">STATUS</string>
    <string name="assessmentTypeLabel">TYPE</string>
    <string name="assessmentTitleLabel">TITLE</string>
    <string name="mentorDetailsTitle">MENTOR DETAILS</string>
    <string name="mentorFirstNameLabel">First Name</string>
    <string name="mentorLastNameLabel">Last Name</string>
    <string name="mentorPhoneLabel">Phone Number</string>
    <string name="alerts_channel_name">Alerts</string>
    <string name="alerts_channel_description">For reminders and alerts.</string>
</resources>
