<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content" android:layout_width="wrap_content"
    tools:context=".AssessmentModificationActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/assessmentDetailsTitle"
            android:layout_width="211dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:text="@string/assessmentDetailsTitle"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/assessmentTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:text="@string/assessmentTitleLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentDetailsTitle" />

        <EditText
            android:id="@+id/assessmentTitleValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="ASSESSMENT 1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentTitleLabel" />

        <TextView
            android:id="@+id/assessmentTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:text="@string/assessmentTypeLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentTitleValue" />

        <Spinner
            android:id="@+id/assessmentTypeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="OBJECTIVE|PERFORMANCE"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentTypeLabel" />

        <TextView
            android:id="@+id/assessmentStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:text="@string/assessmentStatusLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentTypeValue" />

        <Spinner
            android:id="@+id/assessmentStatusValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="NOT TAKEN|PASSED|FAILED"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentStatusLabel" />

        <TextView
            android:id="@+id/assessmentGoalDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:text="@string/assessmentGoalDateLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentStatusValue" />

        <EditText
            android:id="@+id/assessmentGoalDateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="200dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentGoalDateLabel" />

        <Switch
            android:id="@+id/endAlertEnabledValue"
            android:layout_width="85dp"
            android:layout_height="22dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:switchPadding="1dp"
            android:text="Alert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/assessmentGoalDateValue"
            app:layout_constraintTop_toTopOf="@+id/assessmentGoalDateValue" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/assessmentGoalDateValue"
            android:onClick="save"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>