<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content" android:layout_width="wrap_content"
    tools:context=".MentorModificationActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/mentorDetailsTitle"
            android:layout_width="211dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:text="@string/mentorDetailsTitle"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mentorFirstNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:text="@string/mentorFirstNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mentorDetailsTitle" />

        <EditText
            android:id="@+id/mentorFirstNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="Bryan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mentorFirstNameLabel" />

        <TextView
            android:id="@+id/mentorLastNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:text="@string/mentorLastNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mentorFirstNameValue" />

        <EditText
            android:id="@+id/mentorLastNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="Chun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mentorLastNameLabel" />

        <TextView
            android:id="@+id/mentorPhoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:text="@string/mentorPhoneLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mentorLastNameValue" />

        <EditText
            android:id="@+id/mentorPhoneValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="555-555-1234"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mentorPhoneLabel" />

        <TextView
            android:id="@+id/mentorEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:text="Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mentorPhoneValue" />

        <EditText
            android:id="@+id/mentorEmailValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="bryan.chun@wgu.edu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mentorEmailLabel" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mentorEmailValue"
            android:onClick="save"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>